--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Cv MaryoriPrado</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
 
-<div class="wrapper">
+
+<body class="wrapper">
 
     <header>
         <nav class="navbar">
@@ -47,12 +47,9 @@
     
     </main>
 
-
-</div>
-
-<footer>
-    <h2>2023 Curriculum Vitae - Maryori Prado</h2>
-</footer>
+    <footer>
+        <h2>2023 Curriculum Vitae - Maryori Prado</h2>
+    </footer>
   
 </body>
 </html>
