--- a/datospersonales.html
+++ b/datospersonales.html
@@ -6,9 +6,9 @@
     <title>Cv MaryoriPrado</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
 
-<div class="wrapper">
+
+<body class="wrapper">
 
     <header>
         <nav class="navbar">
@@ -56,11 +56,11 @@
     </main>
 
 
-</div>
 
-<footer>
-    <h2>2023 Curriculum Vitae - Maryori Prado</h2>
-</footer>
+
+    <footer>
+        <h2>2023 Curriculum Vitae - Maryori Prado</h2>
+    </footer>
   
 </body>
 </html>
